<resources>
    <string name="app_name">Rao Community</string>
    <string name="des1">Warrior,</string>
    <string name="des2">Poet</string>
    <string name="des3">Ruler &amp; Advisor.</string>
    <string name="des4">Son of Brahma</string>
    <string name="get_started">Get Started</string>
    <string name="desc">By clicking `Get Started`,
        you agree to our Terms, Data Policy and Cookie Policy.
        You may receive SMS notifications
        from us and can opt out at any time.
    </string>
    <string name="welcome">Welcome to Rao Cummunity.</string>
    <string name="default_web_client_id">880346006748-i1kine6415ue2pebdu5vtpjsbens80m0.apps.googleusercontent.com</string>
    <string name="dots">. . .</string>
    <string name="googleBtnTxt">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="date">13/4/22</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="post_photo">Post Photo</string>
    <string name="drawer_button_image">drawer button image</string>
    <string name="you">you</string>
    <string name="need_to">need to</string>
    <string name="login_first">login first</string>
    <string name="using_google">using google.</string>
    <string name="add_post_image">add post image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">send message</string>
    <string name="send_notification">send notification</string>
    <string name="write_post">write post</string>
    <string name="create_post_image">create post image</string>
    <string name="write_something">Write Something ?</string>
    <string name="account">ACCOUNT</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="occupation">Occupation</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="dob">DOB</string>
    <string name="social_links">SOCIAL LINKS</string>
    <string name="gender">Gender</string>
    <string name="user_name">User Name</string>
    <string name="type_a_name">Type a name…</string>
    <string name="say_hello">say hello</string>
    <string name="show_all_posts">show all posts</string>
    <string name="add_post">add post</string>
    <string name="add_notification">add notification</string>
    <string name="done">done</string>
    <string name="add_media">add media</string>
    <string name="my_posts">My Posts</string>
    <string name="my_notifications">My Notifications</string>
    <string name="saved">Saved</string>
    <string name="faq">Faq</string>
    <string name="logout">Logout</string>

</resources>
