<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">



    <item android:id="@+id/my_posts"
          android:icon="@drawable/ic_post_24dp"
          android:title="@string/my_posts"
    />

    <item android:id="@+id/my_notifications"
          android:icon="@drawable/ic_notifications_24dp"
          android:title="@string/my_notifications"
    />

    <item android:id="@+id/saved"
          android:icon="@drawable/ic_save_24dp"
          android:title="@string/saved"
          />


    <item android:id="@+id/faq"
          android:icon="@drawable/ic_help_24dp"
          android:title="@string/faq"
          app:showAsAction="never"
          />


    <item android:id="@+id/logout"
          android:icon="@drawable/ic_logout_24dp"
          android:title="@string/logout"
    />


</menu>