<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity">


    <ImageView
            android:id="@+id/login_image"
            android:src="@drawable/login_image"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
    />

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_to"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
    />

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_first"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
    />

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/using_google"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
    />



    <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/googlesign_in_button"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googleBtnTxt"
            app:isDarkTheme="true" />




</LinearLayout>