<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        tools:context=".activities.StartActivity">

    <!--<TextView-->
            <!--android:layout_margin="25dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/app_name"-->
            <!--android:textSize="30sp"-->
            <!--android:layout_gravity="center"-->
            <!--android:textAlignment="center"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/white"-->
            <!--/>-->



    <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/specification"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des1"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"
        />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des2"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"
        />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des3"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"
        />




    </LinearLayout>



    <Button
            android:id="@+id/getStarted"
            android:layout_margin="30dp"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:background = "@drawable/roundedbutton"
    />


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_margin="30dp"
            android:textColor="@color/lightgray"
    />

</LinearLayout>