<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CreateNotificationActivity" xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.AppBarLayout
            android:layout_height="65dp"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" tools:ignore="MissingConstraints">


        <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:ignore="UseCompoundDrawables">


            <ImageView
                    android:id="@+id/back_btn"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/drawer_button_image"
                    android:src="@drawable/ic_clear_white_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/activityName"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/send_notification"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>



            <android.support.v7.widget.Toolbar
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/toolbar_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="?attr/actionBarSize"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>








    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >


        <EditText
                android:id="@+id/mes"
                android:hint="@string/enter_message"
                android:textSize="15sp"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_message"
                tools:targetApi="o"/>


    </android.support.v7.widget.CardView>

</LinearLayout>